tests/expectations/compiler/core/algorithms/integers/pedersen128/pedersen128_hash_to_u8.out
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:26:21
     |
  26 |         let a: u8 = Pedersen128::hash_to_u8(bool_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:27:21
     |
  27 |         let b: u8 = Pedersen128::hash_to_u8(bool_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:28:21
     |
  28 |         let c: u8 = Pedersen128::hash_to_u8(bool_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:29:21
     |
  29 |         let d: u8 = Pedersen128::hash_to_u8(bool_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:30:21
     |
  30 |         let e: u8 = Pedersen128::hash_to_u8(i8_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:31:21
     |
  31 |         let f: u8 = Pedersen128::hash_to_u8(i16_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:32:21
     |
  32 |         let g: u8 = Pedersen128::hash_to_u8(i32_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:33:21
     |
  33 |         let h: u8 = Pedersen128::hash_to_u8(i64_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:34:21
     |
  34 |         let j: u8 = Pedersen128::hash_to_u8(u8_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:35:21
     |
  35 |         let k: u8 = Pedersen128::hash_to_u8(u16_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:36:21
     |
  36 |         let l: u8 = Pedersen128::hash_to_u8(u32_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:37:21
     |
  37 |         let m: u8 = Pedersen128::hash_to_u8(u64_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:38:21
     |
  38 |         let o: u8 = Pedersen128::hash_to_u8(bool_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:40:21
     |
  40 |         let q: u8 = Pedersen128::hash_to_u8(bool_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
